test_output_15.txt
warning: unused variable: `type_str`
   --> crates/ox_codegen/src/convert/class.rs:575:33
    |
575 | ...                   let type_str = param_type.to_string();
    |                           ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_type_str`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: `ox_codegen` (lib) generated 1 warning
warning: unused variable: `temp_dir`
  --> tests/src/test_nestjs.rs:55:13
   |
55 |         let temp_dir = TempDir::new().unwrap();
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_temp_dir`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `input_dir`
  --> tests/src/test_nestjs.rs:56:13
   |
56 |         let input_dir = PathBuf::from("fixtures/nestjs_controller/src");
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_input_dir`

warning: `integration_tests` (lib test) generated 2 warnings
    Finished `test` profile [unoptimized + debuginfo] target(s) in 0.09s
     Running unittests src/lib.rs (target/debug/deps/integration_tests-726d51bf8feaca74)

running 1 test
Building complex_node...
Method: get, is_handler: false, decorators: 0
Method: process, is_handler: false, decorators: 0
Verifying compilation for complex_node...
    Updating crates.io index
    Blocking waiting for file lock on package cache
     Locking 184 packages to latest compatible versions
      Adding axum v0.7.9 (available: v0.8.7)
      Adding rand v0.8.5 (available: v0.9.2)
      Adding reqwest v0.11.27 (available: v0.12.24)
      Adding tower v0.4.13 (available: v0.5.2)
      Adding tower-http v0.5.2 (available: v0.6.7)
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.177
    Checking cfg-if v1.0.4
    Checking pin-project-lite v0.2.16
    Checking bytes v1.11.0
    Checking smallvec v1.15.1
    Checking itoa v1.0.15
    Checking once_cell v1.21.3
    Checking futures-core v0.3.31
    Checking stable_deref_trait v1.2.1
   Compiling parking_lot_core v0.9.12
    Checking scopeguard v1.2.0
    Checking log v0.4.28
   Compiling find-msvc-tools v0.1.5
   Compiling shlex v1.3.0
    Checking lock_api v0.4.14
   Compiling vcpkg v0.2.15
    Checking tracing-core v0.1.35
   Compiling pkg-config v0.3.32
    Checking pin-utils v0.1.0
   Compiling cc v1.2.47
    Checking tower-service v0.3.3
   Compiling serde_core v1.0.228
   Compiling httparse v1.10.1
    Checking litemap v0.8.1
    Checking writeable v0.6.2
    Checking futures-task v0.3.31
   Compiling icu_properties_data v2.1.1
    Checking http v1.4.0
    Checking futures-util v0.3.31
    Checking tracing v0.1.41
   Compiling icu_normalizer_data v2.1.1
    Checking futures-channel v0.3.31
    Checking bitflags v2.10.0
    Checking foreign-types-shared v0.1.1
   Compiling openssl v0.10.75
    Checking fnv v1.0.7
    Checking httpdate v1.0.3
   Compiling serde v1.0.228
    Checking http v0.2.12
    Checking foreign-types v0.3.2
    Checking hashbrown v0.16.1
   Compiling syn v2.0.111
    Checking futures-sink v0.3.31
    Checking percent-encoding v2.3.2
    Checking tower-layer v0.3.3
   Compiling native-tls v0.2.14
   Compiling zerocopy v0.8.30
    Checking http-body v1.0.1
    Checking equivalent v1.0.2
    Checking form_urlencoded v1.2.2
    Checking try-lock v0.2.5
    Checking ryu v1.0.20
    Checking slab v0.4.11
    Checking mio v1.1.0
    Checking signal-hook-registry v1.4.7
    Checking socket2 v0.6.1
   Compiling serde_json v1.0.145
    Checking indexmap v2.12.1
   Compiling rustversion v1.0.22
    Checking openssl-probe v0.1.6
    Checking parking_lot v0.12.5
    Checking http-body v0.4.6
    Checking getrandom v0.2.16
    Checking socket2 v0.5.10
    Checking want v0.3.1
    Checking http-body-util v0.1.3
   Compiling openssl-sys v0.9.111
    Checking utf8_iter v1.0.4
    Checking sync_wrapper v1.0.2
    Checking atomic-waker v1.1.2
    Checking mime v0.3.17
    Checking memchr v2.7.6
    Checking rand_core v0.6.4
    Checking base64 v0.21.7
    Checking encoding_rs v0.8.35
    Checking matchit v0.7.3
    Checking ipnet v2.11.0
    Checking sync_wrapper v0.1.2
    Checking rustls-pemfile v1.0.4
    Checking tower-http v0.5.2
    Checking tower v0.4.13
    Checking serde_path_to_error v0.1.20
    Checking ppv-lite86 v0.2.21
    Checking rand_chacha v0.3.1
    Checking rand v0.8.5
   Compiling synstructure v0.13.2
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
   Compiling tokio-macros v2.6.0
   Compiling displaydoc v0.2.5
   Compiling serde_derive v1.0.228
   Compiling openssl-macros v0.1.1
   Compiling async-trait v0.1.89
    Checking tokio v1.48.0
    Checking axum-core v0.4.5
    Checking zerofrom v0.1.6
    Checking yoke v0.8.1
    Checking zerovec v0.11.5
    Checking zerotrie v0.2.3
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
    Checking icu_collections v2.1.1
    Checking icu_locale_core v2.1.1
    Checking icu_provider v2.1.1
    Checking serde_urlencoded v0.7.1
    Checking icu_normalizer v2.1.1
    Checking icu_properties v2.1.1
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking url v2.5.7
    Checking tokio-util v0.7.17
    Checking hyper v1.8.1
    Checking tokio-native-tls v0.3.1
    Checking tower v0.5.2
    Checking h2 v0.3.27
    Checking hyper-util v0.1.18
    Checking axum v0.7.9
    Checking hyper v0.14.32
    Checking hyper-tls v0.5.0
    Checking reqwest v0.11.27
    Checking typerust_app v0.1.0 (/home/gefferson-souza/Desktop/personal-projects/TypeRust/tests/fixtures/complex_node/dist)
error[E0308]: mismatched types
 --> src/services/user_processor.rs:5:62
  |
5 | ...client : HttpClient :: new (String :: from ("https://api.users.com")) } } pub fn new_di () -> Self { Self { client : Default :: defaul...
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Arc<HttpClient<User>>`, found `HttpClient<_>`
  |
  = note: expected struct `Arc<HttpClient<User>>`
             found struct `HttpClient<_>`
help: call `Into::into` on this expression to convert `HttpClient<_>` into `Arc<HttpClient<User>>`
  |
5 | impl UserProcessor { pub fn new () -> Self { Self { client : HttpClient :: new (String :: from ("https://api.users.com")).into() } } pub fn new_di () -> Self { Self { client : Default :: default () } } pub async fn process (& self , id : String) -> Result < String , crate :: AppError > { let user = self . client . clone () . get (String :: from ("/") + & id) . await ? ; return Ok (user . name . trim () . to_uppercase ()) ; } }
  |                                                                                                                          +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `typerust_app` (lib) due to 1 previous error

thread 'test_regression::test_scenario_2_complex_node' panicked at tests/src/test_regression.rs:27:5:
Cargo check failed for complex_node
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
test test_regression::test_scenario_2_complex_node ... FAILED

failures:

failures:
    test_regression::test_scenario_2_complex_node

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 29 filtered out; finished in 12.01s

error: test failed, to rerun pass `-p integration_tests --lib`
